Archive/4bcc0321a5a6f12687772e6cc1017df9-0f11904895a20602a6e5ca9f4b5b0039/output
+ g++ -std=c++1y -O2 -Wall -pedantic -pthread main.cpp
main.cpp:3:46: error: converting to ‘std::chrono::milliseconds {aka std::chrono::duration<long int, std::ratio<1l, 1000l> >}’ from initializer list would use explicit constructor ‘constexpr std::chrono::duration<_Rep, _Period>::duration(const _Rep2&) [with _Rep2 = int; <template-parameter-2-2> = void; _Rep = long int; _Period = std::ratio<1l, 1000l>]’
 void f(std::chrono::milliseconds m = { 100 } )
                                              ^
